--- a/src/content/projects/tr/fast-writing-game.mdx
+++ b/src/content/projects/tr/fast-writing-game.mdx
@@ -1,19 +1,56 @@
 ﻿---
 title: "Fast Writing Game"
-summary: "Modern arayuzlu yazma pratigi uygulamasi."
+summary: "Python ve Tkinter ile geliştirilmiş, yazma hızını ve doğruluğunu ölçen modern bir yazma pratiği uygulaması."
 github: "https://github.com/furkandalyan/FastWriting-Game.git"
+tags: ["Python", "Tkinter", "GUI"]
 ---
 
-# Fast Writing Game
+## ⌨️ Proje Hakkında
 
-Fast Writing, yazi hizini ve dogrulugunu gelistirmek icin tasarlanmis yazma pratigi uygulamasidir.
+**Fast Writing Game**, kullanıcıların klavye kullanım becerilerini geliştirmek, yazma hızını (WPM) artırmak ve doğruluğunu ölçmek için tasarlanmış, Python ve **Tkinter** tabanlı bir masaüstü uygulamasıdır.
 
-Rastgele cumleler yazdirir, anlik hata vurgusu yapar, en iyi sureleri skor tablosunda tutar ve surekli yazma modu sunar.
+Bu proje, GUI programlama, olay tabanlı (event-driven) mimari ve gerçek zamanlı metin işleme konularında pratik yapmak amacıyla geliştirilmiştir.
 
-Ozellikler:
-- Rastgele cumleler
-- Anlik hata vurgusu
-- Skor tablosu
-- Surekli yazma modu
+---
 
-GitHub: https://github.com/furkandalyan/FastWriting-Game.git
+## ✨ Öne Çıkan Özellikler
+
+### 🚀 Gerçek Zamanlı Analiz
+- **Anlık Hata Vurgusu:** Yanlış yazılan karakterler anında kırmızı ile işaretlenir, böylece kullanıcı hatasını hemen fark eder.
+- **WPM (Words Per Minute):** Yazma hızı, dakikada yazılan kelime sayısı olarak hesaplanır ve gösterilir.
+
+### 🏆 Rekabetçi Modlar
+- **Sürekli Yazma Modu:** Belirli bir süre boyunca kesintisiz yazarak dayanıklılığınızı test edebilirsiniz.
+- **Skor Tablosu:** En iyi süreler ve skorlar yerel olarak kaydedilir, böylece gelişiminizi takip edebilirsiniz.
+
+### 📝 Dinamik İçerik
+- **Rastgele Cümleler:** Her oyunda farklı cümleler sunularak ezberciliğin önüne geçilir ve gerçek yazma becerisi ölçülür.
+
+---
+
+## 🛠️ Kullanılan Teknolojiler
+
+| Teknoloji | Kullanım Amacı |
+|-----------|----------------|
+| **Python** | Ana programlama dili |
+| **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
+| **Time** | Süre ölçümü ve zamanlayıcı |
+| **Random** | Rastgele cümle seçimi |
+
+---
+
+## 🚀 Nasıl Çalıştırılır?
+
+1.  **Repoyu Klonlayın:**
+    ```bash
+    git clone https://github.com/furkandalyan/FastWriting-Game.git
+    ```
+
+2.  **Oyunu Başlatın:**
+    ```bash
+    python main.py
+    ```
+
+---
+
+> *"Hızlı yazmak değil, doğru yazmak önemlidir. Hız, doğrulukla birlikte gelir."*
