--- a/src/content/projects/tr/password-vault.mdx
+++ b/src/content/projects/tr/password-vault.mdx
@@ -1,20 +1,64 @@
 ﻿---
 title: "Password Vault"
-summary: "Guclu ve modern parola yoneticisi."
+summary: "Python ve Tkinter ile geliştirilmiş, AES-256 şifreleme kullanan modern bir parola yöneticisi."
 github: "https://github.com/furkandalyan/Password-Vault.git"
+tags: ["Python", "Security", "Desktop"]
 ---
 
-# Password Vault
+## 🔑 Proje Hakkında
 
-Password Vault, AES-256 sifreleme kullanan modern bir parola yoneticisidir.
+**Password Vault**, kullanıcıların tüm parolalarını tek bir güvenli yerde saklamasını sağlayan, Python ve **Tkinter** tabanlı modern bir masaüstü uygulamasıdır. AES-256 şifreleme algoritması kullanılarak geliştirilen bu proje, kategori düzeni, parola güç ölçeri ve QR kod paylaşımı gibi özelliklerle hem güvenlik hem de kullanım kolaylığı sunar.
 
-Kategori duzeni, parola guc olceri, QR kod paylasimi ve dark/light arayuz gibi ozelliklerle tum bilgilerinizi guvenle yonetmenizi saglar.
+Bu proje, veritabanı yönetimi (SQLite), kriptografi ve GUI tasarımı konularında pratik yapmak amacıyla geliştirilmiştir.
 
-Ozellikler:
-- AES-256 sifreleme
-- Kategori organizasyonu
-- Parola guc olceri
-- QR kod paylasimi
-- Dark/Light tema
+---
 
-GitHub: https://github.com/furkandalyan/Password-Vault.git
+## ✨ Öne Çıkan Özellikler
+
+### 🛡️ Güvenli Depolama
+- **AES-256 Şifreleme:** Tüm parolalar veritabanında şifreli olarak saklanır, böylece veritabanı dosyası çalınsa bile veriler okunamaz.
+- **Master Password:** Uygulamaya erişim tek bir ana parola ile sağlanır.
+
+### 📂 Organizasyon ve Yönetim
+- **Kategori Düzeni:** Parolalarınızı "Sosyal Medya", "İş", "Finans" gibi kategorilere ayırarak kolayca bulabilirsiniz.
+- **Arama ve Filtreleme:** Binlerce parola arasından istediğinizi saniyeler içinde bulabilirsiniz.
+
+### 🚀 Ekstra Özellikler
+- **Parola Güç Ölçeri:** Oluşturduğunuz parolaların ne kadar güçlü olduğunu anında gösterir.
+- **QR Kod Paylaşımı:** Parolalarınızı mobil cihazınıza kolayca aktarmak için QR kod oluşturabilirsiniz.
+- **Dark/Light Tema:** Göz yormayan modern bir arayüz sunar.
+
+---
+
+## 🛠️ Kullanılan Teknolojiler
+
+| Teknoloji | Kullanım Amacı |
+|-----------|----------------|
+| **Python** | Ana programlama dili |
+| **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
+| **SQLite** | Veritabanı yönetimi |
+| **PyCryptodome** | Kriptografik işlemler (AES) |
+| **Qrcode** | QR kod oluşturma |
+
+---
+
+## 🚀 Nasıl Çalıştırılır?
+
+1.  **Repoyu Klonlayın:**
+    ```bash
+    git clone https://github.com/furkandalyan/Password-Vault.git
+    ```
+
+2.  **Gerekli Kütüphaneleri Yükleyin:**
+    ```bash
+    pip install -r requirements.txt
+    ```
+
+3.  **Uygulamayı Başlatın:**
+    ```bash
+    python main.py
+    ```
+
+---
+
+> *"En güvenli parola, hatırlayamadığınız paroladır."*
