--- a/src/content/projects/tr/perfect-timer-game.mdx
+++ b/src/content/projects/tr/perfect-timer-game.mdx
@@ -1,18 +1,52 @@
 ﻿---
 title: "Perfect Timer Game"
-summary: "Python ve Tkinter ile gelistirilmis refleks oyunu."
+summary: "Python ve Tkinter ile geliştirilmiş, milisaniye hassasiyetinde refleks ve zamanlama oyunu."
 github: "https://github.com/furkandalyan/Perfect-Timer-Game.git"
+tags: ["Python", "Tkinter", "Game Dev"]
 ---
 
-# Perfect Timer Game
+## 🎮 Proje Hakkında
 
-Perfect Timer Game (Tkinter). Python ve Tkinter ile gelistirdigim hassas zamanlama oyunu.
+**Perfect Timer Game**, oyuncunun reflekslerini ve zamanlama yeteneğini test eden minimalist bir oyundur. Python'un **Tkinter** kütüphanesi kullanılarak geliştirilen bu projede amaç basittir: Belirlenen hedef süreye (örneğin 5.000 saniye) mümkün olduğunca yakın bir anda kronometreyi durdurmak.
 
-Amac basit: hedef sure belirle ve kronometreyi tam aninda durdur. Ne erken ne gec.
+Bu proje, GUI programlama, olay tabanlı (event-driven) mimari ve hassas zaman yönetimi konularında pratik yapmak amacıyla geliştirilmiştir.
 
-Ozellikler:
-- Hedef sure belirleme
-- Milisaniye hassasiyetinde zamanlama
-- Basit, odakli oyun mekaniği
+---
 
-GitHub: https://github.com/furkandalyan/Perfect-Timer-Game.git
+## ✨ Öne Çıkan Özellikler
+
+### ⏱️ Hassas Zamanlama
+- **Milisaniye Doğruluğu:** Oyun, Python'un `time` modülünü kullanarak milisaniye hassasiyetinde ölçüm yapar.
+- **Anlık Geri Bildirim:** Durdurduğunuz an ile hedef süre arasındaki fark (örneğin +0.012 sn) anında ekranda gösterilir.
+
+### 🎯 Oyun Mekanikleri
+- **Hedef Süre Belirleme:** Oyuncu, zorluk seviyesine göre farklı hedef süreler seçebilir.
+- **Skor Sistemi:** Hedefe ne kadar yakın durdurursanız o kadar yüksek puan alırsınız. Tam isabet (0.000 fark) "Perfect" bonusu kazandırır.
+
+---
+
+## 🛠️ Kullanılan Teknolojiler
+
+| Teknoloji | Kullanım Amacı |
+|-----------|----------------|
+| **Python** | Ana programlama dili |
+| **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
+| **Time** | Hassas zaman ölçümü ve sayaç mantığı |
+
+---
+
+## 🚀 Nasıl Çalıştırılır?
+
+1.  **Repoyu Klonlayın:**
+    ```bash
+    git clone https://github.com/furkandalyan/Perfect-Timer-Game.git
+    ```
+
+2.  **Oyunu Başlatın:**
+    ```bash
+    python main.py
+    ```
+
+---
+
+> *"Zamanlama her şeydir. Bir milisaniye bile fark yaratır."*
