--- a/src/content/projects/tr/tic-tac-toe.mdx
+++ b/src/content/projects/tr/tic-tac-toe.mdx
@@ -1,20 +1,54 @@
 ﻿---
 title: "Tic-Tac-Toe"
-summary: "Python ile gelistirilmis Tic-Tac-Toe oyunu."
+summary: "Python ile geliştirilmiş, hem CLI hem de GUI arayüzü sunan, çoklu oyuncu ve AI modlarına sahip Tic-Tac-Toe oyunu."
 github: "https://github.com/furkandalyan/Tic-Tac-Toe.git"
+tags: ["Python", "Tkinter", "Game Dev"]
 ---
 
-# Tic-Tac-Toe
+## 🎮 Proje Hakkında
 
-Python ile gelistirilmis Tic-Tac-Toe oyunu. Hem CLI hem de Tkinter GUI arayuzu sunar.
+**Tic-Tac-Toe**, klasik XOX oyununun Python ile geliştirilmiş, hem komut satırı (CLI) hem de grafiksel kullanıcı arayüzü (GUI) sunan kapsamlı bir versiyonudur. Bu proje, oyun mantığını, yapay zeka (AI) algoritmalarını ve farklı arayüz tasarımlarını öğrenmek amacıyla geliştirilmiştir.
 
-Coklu oyuncu ve AI modlarini destekler. Tema degistirme, tam ekran ve oyun sonucunu CSV olarak disari aktarma ozellikleri vardir.
+---
 
-Ozellikler:
-- CLI ve Tkinter GUI
-- Multiplayer ve AI modlari
-- Tema degistirme
-- Tam ekran
-- CSV disari aktarma
+## ✨ Öne Çıkan Özellikler
 
-GitHub: https://github.com/furkandalyan/Tic-Tac-Toe.git
+### 🤖 Oyun Modları
+- **Çoklu Oyuncu (Multiplayer):** Arkadaşınızla aynı bilgisayarda oynayabilirsiniz.
+- **Yapay Zeka (AI):** Bilgisayara karşı oynayarak stratejinizi test edebilirsiniz.
+
+### 🎨 Esnek Arayüz
+- **CLI (Komut Satırı):** Minimalist bir deneyim için terminal üzerinden oynanabilir.
+- **GUI (Tkinter):** Modern bir arayüz, tema değiştirme seçenekleri ve tam ekran modu sunar.
+
+### 📊 Veri Yönetimi
+- **CSV Dışa Aktarma:** Oyun sonuçlarını (kazanan, hamle sayısı vb.) CSV formatında kaydederek analiz edebilirsiniz.
+
+---
+
+## 🛠️ Kullanılan Teknolojiler
+
+| Teknoloji | Kullanım Amacı |
+|-----------|----------------|
+| **Python** | Ana programlama dili |
+| **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
+| **CSV** | Oyun verilerinin kaydedilmesi |
+| **Random** | AI hamlelerinin belirlenmesi |
+
+---
+
+## 🚀 Nasıl Çalıştırılır?
+
+1.  **Repoyu Klonlayın:**
+    ```bash
+    git clone https://github.com/furkandalyan/Tic-Tac-Toe.git
+    ```
+
+2.  **Oyunu Başlatın:**
+    ```bash
+    python main.py
+    ```
+
+---
+
+> *"Basit kurallar, karmaşık stratejiler doğurur."*
