--- a/src/content/projects/tr/qr-code-generator-scanner.mdx
+++ b/src/content/projects/tr/qr-code-generator-scanner.mdx
@@ -1,21 +1,65 @@
 ﻿---
 title: "QR Code Generator And Scanner"
-summary: "QR kod uretme ve tarama uygulamasi."
+summary: "Python ve Tkinter ile geliştirilmiş, QR kod üretme ve tarama işlemlerini kolaylaştıran modern bir masaüstü uygulaması."
 github: "https://github.com/furkandalyan/QR-Code-Generator-Scanner.git"
+tags: ["Python", "Desktop", "QR"]
 ---
 
-# QR Code Generator And Scanner
+## 📱 Proje Hakkında
 
-Bu uygulama QR kod uretme ve tarama icin kolay bir arayuz sunar.
+**QR Code Generator And Scanner**, kullanıcıların metin veya URL'den QR kod oluşturmasını, renk ve boyut özelleştirmesi yapmasını ve webcam ile gerçek zamanlı QR kod taramasını sağlayan, Python ve **Tkinter** tabanlı modern bir masaüstü uygulamasıdır.
 
-Metin veya URL'den QR olusturabilir, renk/arkaplan/boyut ozellestirebilir, PNG/JPG olarak kaydedebilir ve webcam ile gercek zamanli tarama yapabilirsin. Taranan veri panoya kopyalanabilir.
+Bu proje, görüntü işleme (OpenCV), GUI tasarımı ve harici kütüphanelerin (qrcode, pyzbar) entegrasyonu konularında pratik yapmak amacıyla geliştirilmiştir.
 
-Ozellikler:
-- Metin/URL ile QR uretimi
-- Renk, arkaplan ve boyut ozellestirme
-- PNG / JPG kaydetme
-- Resimden QR okuma
-- Webcam ile canli tarama
-- Panoya kopyalama
+---
 
-GitHub: https://github.com/furkandalyan/QR-Code-Generator-Scanner.git
+## ✨ Öne Çıkan Özellikler
+
+### 🎨 QR Kod Oluşturma
+- **Metin/URL Desteği:** İstediğiniz metni veya web adresini QR koda dönüştürebilirsiniz.
+- **Özelleştirme:** QR kodun rengini, arka planını ve boyutunu (piksel cinsinden) değiştirebilirsiniz.
+- **Kaydetme:** Oluşturulan QR kodu PNG veya JPG formatında bilgisayarınıza kaydedebilirsiniz.
+
+### 📷 QR Kod Tarama
+- **Webcam Desteği:** Bilgisayarınızın kamerasını kullanarak gerçek zamanlı QR kod taraması yapabilirsiniz.
+- **Resimden Okuma:** Bilgisayarınızdaki bir resim dosyasından QR kod okuyabilirsiniz.
+- **Panoya Kopyalama:** Taranan veriyi tek tıkla panoya kopyalayabilirsiniz.
+
+### 🚀 Kullanım Kolaylığı
+- **Basit Arayüz:** Karmaşık ayarlarla uğraşmadan, sadece birkaç tıklama ile işlem yapabilirsiniz.
+- **Hızlı İşlem:** QR kod oluşturma ve tarama işlemleri anında gerçekleşir.
+
+---
+
+## 🛠️ Kullanılan Teknolojiler
+
+| Teknoloji | Kullanım Amacı |
+|-----------|----------------|
+| **Python** | Ana programlama dili |
+| **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
+| **Qrcode** | QR kod oluşturma |
+| **OpenCV** | Görüntü işleme ve webcam erişimi |
+| **Pyzbar** | QR kod ve barkod okuma |
+
+---
+
+## 🚀 Nasıl Çalıştırılır?
+
+1.  **Repoyu Klonlayın:**
+    ```bash
+    git clone https://github.com/furkandalyan/QR-Code-Generator-Scanner.git
+    ```
+
+2.  **Gerekli Kütüphaneleri Yükleyin:**
+    ```bash
+    pip install -r requirements.txt
+    ```
+
+3.  **Uygulamayı Başlatın:**
+    ```bash
+    python main.py
+    ```
+
+---
+
+> *"QR kodlar, fiziksel dünyayı dijital dünyaya bağlayan köprülerdir."*
