--- a/src/content/projects/tr/sheet-sweep.mdx
+++ b/src/content/projects/tr/sheet-sweep.mdx
@@ -1,24 +1,68 @@
 ﻿---
 title: "Sheet Sweep"
-summary: "Excel temizleme ve donusturme araci."
+summary: "Python ve Tkinter ile geliştirilmiş, Excel verilerini temizlemek ve dönüştürmek için modern bir masaüstü uygulaması."
 github: "https://github.com/furkandalyan/Sheet-Sweep.git"
+tags: ["Python", "Desktop", "Data"]
 ---
 
-# Sheet Sweep
+## 📊 Proje Hakkında
 
-Sheet Sweep, Excel verilerini temizlemek ve donusturmek icin tasarlanmis modern bir masaustu uygulamasidir.
+**Sheet Sweep**, Excel verilerini temizlemek, dönüştürmek ve analiz etmek için geliştirilmiş, Python ve **Tkinter** tabanlı modern bir masaüstü uygulamasıdır. Veri bilimciler ve analistler için tasarlanan bu araç, sütun seçimi, boş satır temizleme, tekrar eden kayıtları kaldırma ve format standardizasyonu gibi işlemleri kolaylaştırır.
 
-Sutun secimi, bos satir temizleme, sutun adlarini normalize etme, tekrar kayitlari kaldirma ve tarih/sayi formatlarini standardize etme gibi gelismis islemler sunar. Klasor icindeki tum dosyalari toplu isleme ve Excel/CSV/JSON/SQLite formatlarinda disari aktarma destekler.
+Bu proje, veri manipülasyonu (Pandas), GUI tasarımı ve dosya işlemleri konularında pratik yapmak amacıyla geliştirilmiştir.
 
-Ozellikler:
-- Sutun secimi
-- Bos satirlari kaldirma
-- Sutun adlarini normalize etme
-- Tekrar kayitlari kaldirma
-- Tarih ve sayi formatlarini standardize etme
-- Toplu isleme
-- Excel / CSV / JSON / SQLite disari aktarma
-- Islem loglari
-- Profil raporu (pandas-profiling / sweetviz)
+---
 
-GitHub: https://github.com/furkandalyan/Sheet-Sweep.git
+## ✨ Öne Çıkan Özellikler
+
+### 🧹 Veri Temizleme
+- **Sütun Seçimi:** İstenmeyen sütunları kolayca kaldırabilirsiniz.
+- **Boş Satır Temizleme:** Veri setindeki boş satırları otomatik olarak siler.
+- **Tekrar Eden Kayıtlar:** Aynı veriye sahip satırları (duplicate) tespit eder ve kaldırır.
+
+### 🔄 Veri Dönüştürme
+- **Sütun Adı Normalizasyonu:** Sütun adlarını standart bir formata (küçük harf, boşluk yerine alt çizgi vb.) dönüştürür.
+- **Format Standardizasyonu:** Tarih ve sayı formatlarını belirli bir standarda getirir.
+
+### 📂 Toplu İşleme ve Dışa Aktarma
+- **Toplu İşleme:** Bir klasördeki tüm Excel dosyalarını aynı anda işleyebilir.
+- **Çoklu Format Desteği:** Temizlenen verileri Excel, CSV, JSON veya SQLite formatında dışa aktarabilirsiniz.
+
+### 📈 Analiz ve Raporlama
+- **Profil Raporu:** Veri setinin özetini (pandas-profiling / sweetviz) HTML raporu olarak oluşturur.
+- **İşlem Logları:** Yapılan tüm işlemler log dosyasına kaydedilir.
+
+---
+
+## 🛠️ Kullanılan Teknolojiler
+
+| Teknoloji | Kullanım Amacı |
+|-----------|----------------|
+| **Python** | Ana programlama dili |
+| **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
+| **Pandas** | Veri manipülasyonu ve analizi |
+| **OpenPyXL** | Excel dosyalarını okuma ve yazma |
+| **Pandas-Profiling** | Veri profili oluşturma |
+
+---
+
+## 🚀 Nasıl Çalıştırılır?
+
+1.  **Repoyu Klonlayın:**
+    ```bash
+    git clone https://github.com/furkandalyan/Sheet-Sweep.git
+    ```
+
+2.  **Gerekli Kütüphaneleri Yükleyin:**
+    ```bash
+    pip install -r requirements.txt
+    ```
+
+3.  **Uygulamayı Başlatın:**
+    ```bash
+    python main.py
+    ```
+
+---
+
+> *"Veri temizliği, veri analizinin %80'idir."*
