--- a/src/content/projects/tr/snake-game.mdx
+++ b/src/content/projects/tr/snake-game.mdx
@@ -1,18 +1,61 @@
 ﻿---
 title: "Snake Game"
-summary: "Python ve Pygame ile gelistirilmis modern Snake oyunu."
+summary: "Python ve Pygame ile geliştirilmiş, modern arayüze ve akıcı mekaniklere sahip klasik Snake oyunu."
 github: "https://github.com/furkandalyan/Snake-Game.git"
+tags: ["Python", "Pygame", "Game Dev"]
 ---
 
-# Snake Game
+## 🎮 Proje Hakkında
 
-Snake Game (Pygame). Python ve Pygame ile gelistirdigim klasik Snake oyununun modern versiyonu.
+**Snake Game**, klasik yılan oyununun modern bir yorumudur. Python ve **Pygame** kütüphanesi kullanılarak geliştirilen bu proje, nostaljik oynanışı akıcı hareketler, sade bir arayüz ve genişletilebilir bir kod yapısıyla sunar.
 
-Nostaljik oynanisi akici hareket, sade arayuz ve genisletilebilir kod yapisiyla sunar.
+Oyun geliştirme temellerini, nesne yönelimli programlama (OOP) ile oyun nesnelerinin yönetimini ve çarpışma algılama (collision detection) mantığını pekiştirmek amacıyla tasarlanmıştır.
 
-Ozellikler:
-- Akici hareket
-- Basit ve temiz UI
-- Genisletilebilir kod yapisi
+---
 
-GitHub: https://github.com/furkandalyan/Snake-Game.git
+## ✨ Öne Çıkan Özellikler
+
+### 🐍 Modern Oynanış
+- **Akıcı Hareket:** Yılanın hareketi kare kare (frame-by-frame) optimize edilerek takılma olmadan pürüzsüz bir deneyim sağlar.
+- **Dinamik Zorluk:** Yılan büyüdükçe oyun hızı kademeli olarak artar, böylece oyunun heyecanı korunur.
+
+### 🎨 Temiz ve Sade UI
+- **Minimalist Tasarım:** Göz yormayan renk paleti ve sade arayüz elemanları kullanıldı.
+- **Anlık Skor Takibi:** Mevcut skor ve en yüksek skor (High Score) ekranın köşesinde sürekli güncellenir.
+
+### ⚙️ Teknik Detaylar
+- **Genişletilebilir Kod Yapısı:** Oyun mantığı modüler bir şekilde yazıldı (Yılan sınıfı, Yem sınıfı, Oyun Döngüsü sınıfı), böylece yeni özellikler kolayca eklenebilir.
+- **Çarpışma Algılama:** Yılanın kendi kuyruğuna veya duvarlara çarpması hassas bir şekilde kontrol edilir.
+
+---
+
+## 🛠️ Kullanılan Teknolojiler
+
+| Teknoloji | Kullanım Amacı |
+|-----------|----------------|
+| **Python** | Ana programlama dili |
+| **Pygame** | Oyun motoru, grafik çizimi ve olay yönetimi |
+| **Random** | Yemlerin rastgele konumlarda oluşturulması |
+
+---
+
+## 🚀 Nasıl Çalıştırılır?
+
+1.  **Repoyu Klonlayın:**
+    ```bash
+    git clone https://github.com/furkandalyan/Snake-Game.git
+    ```
+
+2.  **Gerekli Kütüphaneleri Yükleyin:**
+    ```bash
+    pip install pygame
+    ```
+
+3.  **Oyunu Başlatın:**
+    ```bash
+    python main.py
+    ```
+
+---
+
+> *"Klasikler asla eskimez, sadece yeniden yorumlanır."*
